@@ -23,25 +23,34 @@
     - Test JARs of some modules are created, installed/deployed and used downstream (search for test-jar).
 
     VARIOUS MVN COMMANDS (with rough times on average notebook)
+    Note: Javadoc takes long time but it's only part of the "dist" profile (active by default).
+    Hence, " -Dmaven.javadoc.skip" is not necessary with "-P -dist".
 
-    Quick run without any tests (~6m):
-    mvn clean install -P -dist -DskipTests -Dmaven.javadoc.skip -Dcheckstyle.skip
+    Quick developer's run without any tests, skipping distribution (~6m):
+    mvn clean install -P -dist -DskipTests -Dcheckstyle.skip
 
     "Quick" build with unit tests only and checkstyle (~30m):
-    mvn clean install -P -dist -DskipITs -Dmaven.javadoc.skip
+    mvn clean install -P -dist -DskipITs
 
-    "Quick" build with smaller integration test (~1h20m):
-    mvn clean install -P -dist -DintegrationTestSuite=fast -Dmaven.javadoc.skip
+    "Quick" build with smaller/faster set of integration test (~1h20m):
+    mvn clean install -P -dist -DintegrationTestSuite=fast
 
-    Running tests of a selected module (-pl) with output to stdout (don't use stdout for complete build, it's too much):
+    Default build - creates distribution package, runs all tests except "extra" tests ():
+    mvn clean install
+
+    Extra test run with custom JVM args (we have 16g on CI server, but it works without args too),
+    runs just under 900 tests, skips distribution and any common unit/IT tests (~1h50m):
+    mvn clean install -P extratest,-dist -Dsurefire.args="-Xmx8g" -Dfailsafe.args="-Xmx8g -Duser.language=en"
+
+    Extra test run for a single module, -D property matches the module in -pl:
+    mvn clean install -DskipConnTests=false -pl testing/conntest
+
+    Full build with extra tests for a single module, "-DskipTests" suppresses other default tests:
+    mvn clean install -P -dist -DskipTests -DskipStoryTests=false
+    See "extratest" profile in testing/pom.xml for all individual properties enabling extra tests.
+
+    Running unit+IT tests of a selected module (-pl) with output to stdout:
     mvn clean install -DredirectTestOutputToFile=false -pl model/model-intest
-
-    Long test run (with 16g on CI server, but this should work too - isn't Xmx even unnecessary?),
-    runs just under 900 tests (~1h50m):
-    mvn -P tomcat,extratest clean install -Dsurefire.args="-Xmx8g" -Dfailsafe.args="-Xmx8g -Duser.language=en"
-
-    Comprehensive quick build/dist with normally excluded modules including checkstyle, but no tests/javadoc (~13m):
-    mvn clean install -P dist,extratest,conntest,schrodinger -DskipTests -Dmaven.javadoc.skip
     -->
 
     <groupId>com.evolveum.midpoint</groupId>
@@ -69,7 +78,6 @@
     </licenses>
 
     <modules>
-        <module>build-tools</module>
         <module>tools</module>
         <module>infra</module>
         <module>repo</module>
@@ -112,10 +120,13 @@
         <ansi.color>true</ansi.color>
         <verbose.jaxb2>false</verbose.jaxb2>
         <verbose.jaxws>false</verbose.jaxws>
-        <!--suppress UnresolvedMavenProperty -->
+
+        <!--suppress UnresolvedMavenProperty (for IDE development) -->
         <git.describe>${describe}</git.describe>
         <timestamp>${maven.build.timestamp}</timestamp>
         <maven.build.timestamp.format>EEE, d MMM yyyy HH:mm:ss Z</maven.build.timestamp.format>
+
+        <!-- JVM args for testing plugins, can be used to add profiling, etc. -->
         <surefire.args>-Xms1024m -Xmx4096m</surefire.args>
         <failsafe.args>-Xms1024m -Xmx4096m -Duser.language=en</failsafe.args>
         <!--
@@ -1753,16 +1764,9 @@
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-checkstyle-plugin</artifactId>
                 <version>${checkstyle.version}</version>
-                <dependencies>
-                    <dependency>
-                        <groupId>com.evolveum.midpoint</groupId>
-                        <artifactId>build-tools</artifactId>
-                        <version>${project.version}</version>
-                    </dependency>
-                </dependencies>
                 <configuration>
-                    <configLocation>midpoint-build/checkstyle.xml</configLocation>
-                    <suppressionsLocation>midpoint-build/checkstyle-suppressions.xml</suppressionsLocation>
+                    <configLocation>${maven.multiModuleProjectDirectory}/config/checkstyle/checkstyle.xml</configLocation>
+                    <suppressionsLocation>${maven.multiModuleProjectDirectory}/config/checkstyle/checkstyle-suppressions.xml</suppressionsLocation>
                     <encoding>UTF-8</encoding>
                     <consoleOutput>true</consoleOutput>
                     <failsOnError>true</failsOnError>
@@ -1884,9 +1888,6 @@
                         <forkCount>1</forkCount>
                         <reuseForks>true</reuseForks>
                         <redirectTestOutputToFile>${redirectTestOutputToFile}</redirectTestOutputToFile>
-                        <!-- <threadCount>1</threadCount> -->
-                        <!-- <perCoreThreadCount>false</perCoreThreadCount> -->
-                        <!-- <reportFormat>plain</reportFormat> -->
                         <trimStackTrace>false</trimStackTrace>
                         <!-- See https://issues.apache.org/jira/browse/SUREFIRE-1588 -->
                         <useSystemClassLoader>false</useSystemClassLoader>
@@ -1897,8 +1898,6 @@
                             </java.util.logging.config.file>
                         </systemPropertyVariables>
                         <argLine>${surefire.args}</argLine>
-                        <!--<argLine>-agentpath:/usr/local/yjp-11.0.10/bin/linux-x86-64/libyjpagent.so=alloceach=10,allocsizelimit=1048576,sampling,walltimespec=/home/lazyman/.yjp/config/.walltime,noj2ee,profileruipath=/usr/local/yjp-11.0.10/bin/yjp.sh,onexit=snapshot
-                            -Xms512m -Xmx1024m -XX:MaxPermSize=192m</argLine> -->
 
                         <!-- it's used for CI build to load JDBC libraries which can not
                             be installed to public maven repository (MS SQL, ORACLE) -->
@@ -2006,9 +2005,11 @@
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-checkstyle-plugin</artifactId>
+                <!-- TODO: unify with other checkstyle setup in pluginManagement? -->
                 <version>${checkstyle.version}</version>
                 <configuration>
-                    <configLocation>midpoint-build/checkstyle.xml</configLocation>
+                    <configLocation>${maven.multiModuleProjectDirectory}/build-system/checkstyle-configs/checkstyle.xml</configLocation>
+                    <!-- TODO: what about suppressions? without them and with failsOnError true it must fail, or not? -->
                     <encoding>UTF-8</encoding>
                     <consoleOutput>true</consoleOutput>
                     <failsOnError>true</failsOnError>
@@ -2036,6 +2037,18 @@
             <modules>
                 <module>dist</module>
             </modules>
+        </profile>
+
+        <!--
+        Activating extra tests (tests under testing module), skipping other tests.
+        Often we want to combine with disabling dist: -P extratest,-dist
+        See testing/pom.xml for more on "extra" tests, here we just skip the default tests.
+        -->
+        <profile>
+            <id>extratest</id>
+            <properties>
+                <skipTests>true</skipTests>
+            </properties>
         </profile>
 
         <profile>
@@ -2089,56 +2102,6 @@
             <activation>
                 <jdk>1.8</jdk>
             </activation>
-        </profile>
-
-        <!--
-        Testing profiles - in all cases this skips surefire/failsafe,
-        which is switched on only in specific testing related modules.
-        TODO: How do we run schrodinger? Don't we want it in this mode as well?
-        -->
-        <profile>
-            <id>extratest</id>
-            <build>
-                <plugins>
-                    <plugin>
-                        <!-- Skip all tests by default. We only want selected tests to run. -->
-                        <artifactId>maven-surefire-plugin</artifactId>
-                        <version>${surefire.version}</version>
-                        <configuration>
-                            <skip>true</skip>
-                        </configuration>
-                    </plugin>
-                    <plugin>
-                        <artifactId>maven-failsafe-plugin</artifactId>
-                        <version>${failsafe.version}</version>
-                        <configuration>
-                            <skip>true</skip>
-                        </configuration>
-                    </plugin>
-                </plugins>
-            </build>
-        </profile>
-        <profile>
-            <id>conntest</id>
-            <build>
-                <plugins>
-                    <plugin>
-                        <!-- Skip all tests by default. We only want selected tests to run. -->
-                        <artifactId>maven-surefire-plugin</artifactId>
-                        <version>${surefire.version}</version>
-                        <configuration>
-                            <skip>true</skip>
-                        </configuration>
-                    </plugin>
-                    <plugin>
-                        <artifactId>maven-failsafe-plugin</artifactId>
-                        <version>${failsafe.version}</version>
-                        <configuration>
-                            <skip>true</skip>
-                        </configuration>
-                    </plugin>
-                </plugins>
-            </build>
         </profile>
     </profiles>
 </project>
